--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,5 @@ before_script:
 - composer install --no-progress
 
 script:
-- vendor/bin/couscous travis-auto-deploy --php-version=7.0
+- php couscous.phar travis-auto-deploy --php-version=7.0
+#- vendor/bin/couscous travis-auto-deploy --php-version=7.0
